--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ OPENAI_API_KEY="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"
 # ChromaDB Configuration (path is now resolved in code, this is a fallback)
 # CHROMA_DB_PATH is auto-resolved to project_root/data/chroma_db
 
+BACKEND_URL=
