Update .env with BACKEND_URL
Added BACKEND_URL to the environment configuration.

--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ OPENAI_API_KEY="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"
 # ChromaDB Configuration (path is now resolved in code, this is a fallback)
 # CHROMA_DB_PATH is auto-resolved to project_root/data/chroma_db
 
-BACKEND_URL=
+BACKEND_URL=https://career-mentor-api.onrender.com
+
